# boxcars-py

./: Cargo.toml  pyproject.toml
.github/workflows/: publish-pypi.yml
src/: lib.rs
src/boxcars_py.boxcars_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
