[package]
name = "sprocket-boxcars-py"
version = "0.3.0"
edition = "2021"
description = "Python bindings for the Rocket League replay parser boxcars."
authors = ["Jake Bailey <asaxplayinghorse@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SprocketBot/boxcars-py"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sprocket_boxcars_py"
crate-type = ["cdylib"]

[dependencies]
boxcars = { path = "/Users/jacbaile/Workspace/MLE/boxcars" }
serde_json = "1.0.133"
pyo3 = "0.22.0"