[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sprocket-boxcars-py"
version = "0.3.0"
description = "Python bindings for the Boxcars Rocket League replay parser"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]


[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "sprocket_boxcars_py"
